<?xml version="2.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

<TextView
    android:id="@+id/visor"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:text="0"
    android:textColor="@color/white"
    android:textSize="65sp"
    android:fontFamily="@font/sfuidisplayregular"
    android:gravity="right|bottom"
    android:paddingRight="20dp"
    />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button_ac"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_lightgray"
        android:text="@string/button_ac"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"

        />


    <Button
        android:id="@+id/buttonMaisMenos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_lightgray"
        android:text="@string/button_mais_menos"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/buttonPercentual"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_lightgray"
        android:text="@string/button_porcentual"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"

        />
    <Button
        android:id="@+id/buttonDivisao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_orange"
        android:text="@string/button_divisao"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"


        />
    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_gray"
        android:text="@string/value7"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_gray"
        android:text="@string/value8"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_gray"
        android:text="@string/value9"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/buttonMultiplicacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_orange"
        android:text="@string/button_multiplicacao"
        android:textSize="34sp"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_weight="1"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/value4"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/value5"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/value6"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/buttonMenos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_orange"
            android:text="@string/button_menos"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/value1"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/value2"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/value3"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/buttonMais"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_orange"
            android:text="@string/button_mais"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/button_gray"
            android:text="@string/value0"
            android:gravity="left|center_vertical"
            android:paddingLeft="38dp"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/buttonVirgula"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gray"
            android:text="@string/button_virgula"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1.5"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/buttonCalcular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_orange"
            android:text="@string/button_igual"
            android:textSize="34sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/sfuidisplayregular"
            android:layout_weight="1.5"
            android:textColor="@color/white"
            />




    </LinearLayout>



</LinearLayout>